Tweak typography on mobile view to match ShiftCTRL.space design.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
                     border-left: 0;
                     display: block;
                 }
+                main p {
+                    font-size: 18px;
+                    text-align: justify;
+                }
             }
 
             /**
@@ -253,7 +257,7 @@
 
                 <h2 id="help">Help</h2>
                 <p>Sound like fun but having trouble? <a href="sms:3239634827?body=My%20name%20is%20NAME.%20Can%20you%20help%20me%20with%20the%20Shift-CTRL%20Library%3F%20I%20am%20wearing%20OUTFIT%2C%20so%20you%20can%20find%20me.%20%3A%29%20Thanks%21">Click here to txt us</a>! No response? Ask around! We'll be happy to show you the ropes.</p>
-                <p><strong>Please Note:</strong> The Local Resource Center is, as the name suggests, <em>local</em>. This means that it is only accessible near the physical space in which it is hosted. For example, unless you download the books from our Library onto your device, <em>you will not have access to them until you return here</em>.</p>
+                <p><strong>Please note:</strong> The Local Resource Center is, as the name suggests, <em>local</em>. This means that it is only accessible near the physical space in which it is hosted. For example, unless you download the books from our Library onto your device, <em>you will not have access to them until you return here</em>.</p>
                 <p>Welcome to <a href="https://shiftctrl.space/">ShiftCTRL.space</a>.</p>
             </footer>
         </main>
