--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </head>
     <body>
         <header>
-            <h1><img id="logo" src="img/logo.bw.368x368.gif" alt="Shift-CTRL Local" height="300" /></h1>
+            <h1><img id="logo" src="img/logo.bw.svg" alt="Shift-CTRL Local" height="300" /></h1>
         </header>
 
         <main id="MainColumn">
