Put other exhibits back "on tap," and make single quotes curly.

--- a/index.html
+++ b/index.html
@@ -192,18 +192,18 @@
         <main id="MainColumn">
             <section id="welcome">
                 <h2>Welcome to the Shift-CTRL Local Resource Center!</h2>
-                <p>For today&rsquo;s I/O session, we&rsquo;ve prepared a number of demonstrations for you to experience and, we hope, to enjoy. Each demo is interactive; we <em>want</em> you to play with them. If you&rsquo;re already familiar with the tools on display, just have fun. If you&rsquo;re not, that&rsquo;s okay! Look around and ask the person nearest you if they know how the demo works. There are many people here who helped set these up, and we&rsquo;ll be happy to show you the ropes. If no one's nearby, you can always <a href="#help">txt us for help!</a></p>
+                <p>For today&rsquo;s I/O session, we&rsquo;ve prepared a number of demonstrations for you to experience and, we hope, to enjoy. Each demo is interactive; we <em>want</em> you to play with them. If you&rsquo;re already familiar with the tools on display, just have fun. If you&rsquo;re not, that&rsquo;s okay! Look around and ask the person nearest you if they know how the demo works. There are many people here who helped set these up, and we&rsquo;ll be happy to show you the ropes. If no one&rsquo;s nearby, you can always <a href="#help">txt us for help!</a></p>
                 <p>On tap at today&rsquo;s I/O session:</p>
             </section><!-- #welcome -->
 
             <nav id="MainNav">
                 <li><a href="#library">Digital Library</a></li>
-            </nav>
-
-            <p>At past I/O sessions, we've demonstrated:</p>
-            <nav id="SecondaryNav">
                 <li><a href="#wireshark">Wireshark</a></li>
                 <li><a href="#rtl-sdr">RTL-SDR</a></li>
+            </nav>
+
+            <p>At past I/O sessions, we&rsquo;ve also demonstrated:</p>
+            <nav id="SecondaryNav">
                 <li><a href="#raspberry-pi">Raspberry Pi</a></li>
             </nav>
 
@@ -224,7 +224,7 @@
 
             <section id="wireshark">
                 <h2>Wireshark</h2>
-                <p>Computers talk to each other&mdash;a lot. In fact, digital communications technologies such as Wi-Fi work the same way as shouting in a room. Any other computer within metaphorical earshot can hear what was said. <a href="https://wireshark.org/" title="Read more about Wireshark."><dfn>Wireshark</dfn></a> is a free and open source software tool known as a &ldquo;packet analyzer&rdquo; or a &ldquo;packet sniffer.&rdquo; It&rsquo;s used for network troubleshooting, analysis, communications protocol development, and education. Essentially, it's a digital eavesdropper. As a forensic tool, it can dissect the contents of the messages sent between computers. Of course, this makes it a prime tool for hacking and security testing. We&rsquo;ve set up an interactive demo to show you just what &ldquo;sniffing packets&rdquo; really means. Connect to the &ldquo;<strong>Shift-CTRL Wireshark Demo (INSECURE!)</strong>&rdquo; Wi-Fi network with your device, but <em>don&rsquo;t do anything sensitive (like online banking) while connected to it</em>. You&rsquo;ll be surprised at how much you can find out just by listening in.</p>
+                <p>Computers talk to each other&mdash;a lot. In fact, digital communications technologies such as Wi-Fi work the same way as shouting in a room. Any other computer within metaphorical earshot can hear what was said. <a href="https://wireshark.org/" title="Read more about Wireshark."><dfn>Wireshark</dfn></a> is a free and open source software tool known as a &ldquo;packet analyzer&rdquo; or a &ldquo;packet sniffer.&rdquo; It&rsquo;s used for network troubleshooting, analysis, communications protocol development, and education. Essentially, it&rsquo;s a digital eavesdropper. As a forensic tool, it can dissect the contents of the messages sent between computers. Of course, this makes it a prime tool for hacking and security testing. We&rsquo;ve set up an interactive demo to show you just what &ldquo;sniffing packets&rdquo; really means. Connect to the &ldquo;<strong>Shift-CTRL Wireshark Demo (INSECURE!)</strong>&rdquo; Wi-Fi network with your device, but <em>don&rsquo;t do anything sensitive (like online banking) while connected to it</em>. You&rsquo;ll be surprised at how much you can find out just by listening in.</p>
                 <h3>How Wireshark works</h3>
                 <p>Whenever your computer sends a message via a network connection, such as a network cable, a Wi-Fi radio, or even from one app to another on your own computer, your computer emits a <dfn>packet</dfn> (literally, a package) of information. The outside wrapper of these packets can be inspected just as any physical package can be. If the packet is unencrypted, i.e., if the package is not sealed or locked, it can be opened, and its contents examined. Wireshark simply looks at all the packets transiting across a network connection to which it has access, and shows you the content. This might be Web pages, e-mail messages, or whatever else you&rsquo;re downloading.</p>
             </section><!-- #wireshark -->
@@ -256,7 +256,7 @@
                 </section><!-- #donate -->
 
                 <h2 id="help">Help</h2>
-                <p>Sound like fun but having trouble? <a href="sms:3239634827?body=My%20name%20is%20NAME.%20Can%20you%20help%20me%20with%20the%20Shift-CTRL%20Library%3F%20I%20am%20wearing%20OUTFIT%2C%20so%20you%20can%20find%20me.%20%3A%29%20Thanks%21">Click here to txt us</a>! No response? Ask around! We'll be happy to show you the ropes.</p>
+                <p>Sound like fun but having trouble? <a href="sms:3239634827?body=My%20name%20is%20NAME.%20Can%20you%20help%20me%20with%20the%20Shift-CTRL%20Library%3F%20I%20am%20wearing%20OUTFIT%2C%20so%20you%20can%20find%20me.%20%3A%29%20Thanks%21">Click here to txt us</a>! No response? Ask around! We&rsquo;ll be happy to show you the ropes.</p>
                 <p><strong>Please note:</strong> The Local Resource Center is, as the name suggests, <em>local</em>. This means that it is only accessible near the physical space in which it is hosted. For example, unless you download the books from our Library onto your device, <em>you will not have access to them until you return here</em>.</p>
                 <p>Welcome to <a href="https://shiftctrl.space/">ShiftCTRL.space</a>.</p>
             </footer>
